todo list in a card

--- a/index.html
+++ b/index.html
@@ -27,9 +27,12 @@
 				</div>
 				<button class="btn btn-sm btn-dark " type="submit" id="add-todo-btn">Add todo!</button>
 			</form>
-			<ul id="todo-list">
-
-			</ul>
+			<div class="card">
+				<div class="card-body">
+					<ul id="todo-list">
+					</ul>
+				</div>
+			</div>
 		</div>
 	</div>
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
